2012-03-15  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Make ATLAS_2012_I1084540 less verbose, and general code
	cleanup of that analysis.
	* New-style plugin hook in ATLAS_2011_I926145,
	ATLAS_2011_I944826 and ATLAS_2012_I1084540
	* Fix compiler warnings in ATLAS_2011_I944826 and CMS_2011_S8973270
	* CMS_2011_S8941262: Weights are double, not int.

2012-03-07  Andy Buckley  <andy.buckley@cern.ch>

	* Marking ATLAS_2011_I919017 as VALIDATED (this should have
	happened a long time ago) and adding more references.

2012-02-28  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* lighthisto.py: Caching for re.compile(). This speeds up aida2flat
	ant flat2aida by more than an order of magnitude.

2012-02-27  Andy Buckley  <andy.buckley@cern.ch>

	* doc/mk-analysis-html: Adding more LaTeX/text -> HTML conversion
	replacements, including better <,> handling.

2012-02-26  Andy Buckley  <andy.buckley@cern.ch>

	* Adding CMS_2011_S8973270, CMS_2011_S8941262, CMS_2011_S9215166,
	CMS_QCD_10_024, from CMS.

	* Adding LHCB_2011_I917009 analysis, from Alex Grecu.

	* src/Core/Analysis.cc, include/Rivet/Analysis.hh: Add a numeric-arg version of histoPath().

2012-02-24  Holger Schulz  <holger.schulz@physik.hu-berlin.de>

	* Adding ATLAS Ks/Lambda analysis.

2012-02-20  Andy Buckley  <andy.buckley@cern.ch>

	* src/Analyses/ATLAS_2011_I925932.cc: Using new overflow-aware
	normalize() in place of counters and scale(..., 1/count)

2012-02-14  Andy Buckley  <andy.buckley@cern.ch>

	* Splitting MC_GENERIC to put the PDF and PID plotting into
	MC_PDFS and MC_IDENTIFIED respectively.

	* Renaming MC_LEADINGJETS to MC_LEADJETUE.

2012-02-14  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* DELPHI_1996_S3430090 and ALEPH_1996_S3486095:
	fix rapidity vs {Thrust,Sphericity}-axis.

2012-02-14  Andy Buckley  <andy.buckley@cern.ch>

	* bin/compare-histos: Don't attempt to remove bins from MC histos
	where they aren't found in the ref file, if the ref file is not